# JEDITOR

./: .gitignore  LICENSE  README.md  dev.toml  dev_requirements.txt  dev_setup.py  editor.py  editor.ui  editor_main.py  editor_main.ui  je_editor_content.json  main.py  main_window_tkinter.py  pyproject.toml  requirements.txt  setup.py  stabe.toml  stable.toml
.circleci/: config.yml
.github/workflows/: dev_python3_10.yml  dev_python3_11.yml  dev_python3_12.yml  dev_python3_8.yml  dev_python3_9.yml  je-editor-github-actions_dev.yml  je-editor-github-actions_dev_python3_10.yml  je-editor-github-actions_dev_python3_11.yml  je-editor-github-actions_dev_python3_8.yml  je-editor-github-actions_dev_python3_9.yml  je-editor-github-actions_stable.yml  je-editor-github-actions_stable_python3_10.yml  je-editor-github-actions_stable_python3_11.yml  je-editor-github-actions_stable_python3_8.yml  je-editor-github-actions_stable_python3_9.yml  stable_python3_10.yml  stable_python3_11.yml  stable_python3_12.yml  stable_python3_8.yml  stable_python3_9.yml
architecture_diagram/: JEditor_Architecture.drawio
circle_ci_test_dev/exec/code_exec_test/: execute_test.py  get_exec_test.py
circle_ci_test_dev/exec/shell_exec_test/: shell_test.py
circle_ci_test_stable/exec/code_exec_test/: execute_test.py
circle_ci_test_stable/exec/shell_exec_test/: shell_test.py
circle_ci_test_stable/tkinter_test/: editor_with_theme.py
deprecation_for_old_python/: dev_setup.py  setup.py
designer_ui_file/: main_editor.ui
docs/: conf.py
docs/docs/Eng/: how_to_use.rst
docs/docs/Zh/: zh_index.rst
docs/source/: conf.py  index.rst
docs/source/doc/: doc_index.rst
docs/source/example/: example_index.rst
docs/source/ui_doc/: ui_doc_index.rst
docs/source/ui_utils_doc/: ui_utils_doc_index.rst
exe/: a.py  auto_py_to_exe.json  jeditor_build_project.ifp  start_editor.py  user_setting.json
exe/.jeditor/: user_color_setting.json
exe/JEditor/: test.py
je_editor/: __init__.py  __main__.py  je_editor.py  start_editor.py
je_editor/code_scan/: ruff_thread.py  watchdog_implement.py  watchdog_thread.py
je_editor/git/: commit_graph.py  git.py
je_editor/git_client/: commit_graph.py  git.py  git_action.py  git_cli.py  github.py
je_editor/git_feature/: commit_graph.py  git.py  git_cli.py
je_editor/pyside_ui/auto_save/: auto_save_thread.py
je_editor/pyside_ui/browser/: browser_download_window.py  browser_serach_lineedit.py  browser_view.py  browser_widget.py  je_broser.py  main_browser_widget.py
je_editor/pyside_ui/code/: running_process_manager.py
je_editor/pyside_ui/code_editor/: code_edit_plaintext.py
je_editor/pyside_ui/code_process/: code_exec.py
je_editor/pyside_ui/code_result/: code_record.py
je_editor/pyside_ui/colors/: global_color.py
je_editor/pyside_ui/editor_main_ui/: main_editor.py
je_editor/pyside_ui/file_dialog/: open_file_dialog.py  save_file_dialog.py
je_editor/pyside_ui/git/: git_branch_tree_widget.py  git_client_gui.py  graph_view.py
je_editor/pyside_ui/git_feature/: commit_table.py  git_branch_tree_widget.py  git_client_gui.py  graph_view.py
je_editor/pyside_ui/git_ui/: git_branch_tree_widget.py  git_client_gui.py
je_editor/pyside_ui/main_ui/: main_editor.py
je_editor/pyside_ui/main_ui_setting/: ui_setting.py
je_editor/pyside_ui/menu/: set_menu.py
je_editor/pyside_ui/search_ui/: search_box.py  search_error_box.py  search_text_box.py
je_editor/ui/: __init__.py  editor.py  editor_main.ui  main.py  main_window.py  tkinter_editor.py
je_editor/ui/editor_main_ui/: __init__.py  (+1 more)
je_editor/utils/: __init__.py  complete_keyword.py
start_editor/: start_editor.py
test/tkinter_test/: import_tkinter_test.py
(+269 files in other folders)
