# Rename to build stable version
# This is stable version
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "je_editor"
version = "0.0.186"
authors = [
    { name = "JE-Chen", email = "jechenmailman@gmail.com" },
]
description = "JEditor is basic but powerful editor include GPT"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "PySide6==6.8.1.1", "qt-material", "yapf", "frontengine", "pycodestyle", "jedi", "qtconsole", "re-edge-gpt[gui]"
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Environment :: X11 Applications",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]


[project.urls]
Homepage = "https://github.com/JE-Chen/je_editor"
Documentation = "https://je-editor.readthedocs.io/en/latest/"
Code = "https://github.com/JE-Chen/je_editor"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages]
find = { namespaces = false }
