# Rename to build dev version
# This is dev version
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "je_editor_dev"
version = "0.0.244"
authors = [
    { name = "JE-Chen", email = "jechenmailman@gmail.com" },
]
description = "JEditor is basic but powerful editor include GPT"
requires-python = ">=3.10"
license-files = ["LICENSE"]
dependencies = [
    "PySide6==6.10.0", "qt-material", "yapf", "frontengine", "pycodestyle", "jedi",
    "qtconsole", "langchain_openai==1.0.0", "langchain==1.0.0", "pydantic", "watchdog", "ruff", "gitpython"
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Environment :: X11 Applications",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/JE-Chen/je_editor"
Documentation = "https://je-editor.readthedocs.io/en/latest/"
Code = "https://github.com/JE-Chen/je_editor"

[project.readme]
file = "README.md"
content-type = "text/markdown"


[tool.setuptools.packages]
find = { namespaces = false }